# etl_music_app_bigData

./: .env.example  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml  tests.yml
docs/: architecture.md  credentials.md  powerbi_athena.md
infra/cloudformation/: chinook-analytics.yml
jobs/glue/: dim_date_job.py  dimensions_visual.py  fact_sales_visual.py  full_copy_history.py
sql/: athena_ddl.sql  powerbi_views.sql
src/chinook_analytics/: __init__.py  athena_queries.py  config.py  date_dimension.py  deploy.py  deploy_stack.py
tests/: test_athena_queries.py  test_date_dimension.py
