[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chinook-analytics-etl"
version = "0.1.0"
description = "S3, Glue, Athena and Power BI analytics ETL for Chinook."
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34",
  "holidays>=0.60",
]

[tool.setuptools.packages.find]
where = ["src"]
